--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minima
-title: KingDubDub's Crap
+theme:jekyll-dark
+title:KingDubDub's Crap
 description: Guides, projects, and numbers from your local idiot!
