--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-clean
+remote_theme: jekyll-clean
 title: KingDubDub's Crap
 description: Guides, projects, and numbers from your local idiot!
